# mysql-router-operators

./: CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  index.html  pyproject.toml  refresh_versions.toml
kubernetes/: charmcraft.yaml  concierge.yaml  config.yaml  metadata.yaml  pyproject.toml  refresh_versions.toml  spread.yaml  tox.ini
kubernetes/docs/explanation/: e-interfaces.md  e-juju-details.md
kubernetes/docs/how-to/: h-deploy-microk8s.md  h-enable-encryption.md  h-enable-monitoring.md  h-enable-tracing.md  h-external-access.md  h-manage-units.md  h-rollback-minor.md  h-upgrade-minor.md  h-upgrade.md
kubernetes/docs/reference/: r-releases.md  r-system-requirements.md  r-testing.md
kubernetes/docs/tutorial/: t-deploy.md  t-enable-tls.md  t-manage-units.md
kubernetes/src/: charm.py  kubernetes_logrotate.py  migration_from_refresh_v2.py  rock.py
kubernetes/src/relations/: kubernetes_cos.py
kubernetes/terraform/: main.tf  outputs.tf  variables.tf
kubernetes/tests/integration/: conftest.py  helpers.py  helpers_new.py  juju_.py  test_architecture.py  test_charm.py  test_exporter.py  test_exporter_with_tls.py  test_expose_external.py  test_log_rotation.py  test_tls.py  test_upgrade.py  test_upgrade_from_v2.py
kubernetes/tests/integration/integration/: test_architecture.py  test_architecture_new.py  test_charm.py  test_charm_new.py  test_exporter.py  test_exporter_new.py  test_exporter_with_tls.py  test_exporter_with_tls_new.py  test_expose_external.py  test_expose_external_new.py  test_log_rotation.py  (+7 more)
kubernetes/tests/unit/: conftest.py
(+21129 files in other folders)
