[project]
name = "unused"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "charm-refresh>=3.1.0.2",
    "common",
    "lightkube>=0.17.2",
    "ops>=2.9.0,<2.10",
    "tenacity>=9.1.2",
]

[dependency-groups]
charmlibs-pydeps = [
    "cosl>=0.0.50",
    "cryptography>=46.0.2",
    "jsonschema>=4.25.1",
    "opentelemetry-exporter-otlp-proto-http==1.21.0",
    "ops>=2.0.0",
    "pydantic>=2.11.10",
]

[tool.uv]
no-binary = true

[tool.uv.sources]
common = { path = "./common", editable = true }
